Update hero copy and marketing consent translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,8 +6,8 @@
   "nav_admin": "Admin",
   "signup": "Sign Up",
   "hero_feature_tag": "LOOKBOOK FEATURE",
-  "hero_feature_title": "'APM x LUCE' automated AI model updates for supplier catalogs",
-  "hero_feature_description": "Experience AI-powered onboarding and catalog updates for apM partners.",
+  "hero_feature_title": "B2B seller-focused app \"LUCE\"<br>apM wholesalers, one of the top 3 onboarding groups, now get AI-model automated catalog updates",
+  "hero_feature_description": "Experience a new AI-driven onboarding and product refresh flow built for Dongdaemun wholesalers on LUCE.",
   "hero_video_fallback": "Your browser cannot play this video.",
   "signup_status_tag": "SIGNUP STATUS",
   "signup_status_title": "Membership Sign-up Overview",
@@ -67,6 +67,7 @@
   "signup_change_type": "Choose another member type",
   "signup_terms_title": "Terms & Consents",
   "signup_terms_required_title": "Consent to collect and use personal data (Required)",
+  "signup_terms_marketing_title": "Consent to receive marketing updates (Optional)",
   "signup_terms_intro": "LUCE collects and uses the following personal data for membership.",
   "signup_terms_item1": "Collected items: name, email, password, phone, optional company and channel info",
   "signup_terms_item2": "Purpose: provide services, identify members, support inquiries, match partners",
