--- a/locales/ko.json
+++ b/locales/ko.json
@@ -6,8 +6,8 @@
   "nav_admin": "어드민",
   "signup": "회원가입",
   "hero_feature_tag": "LOOKBOOK FEATURE",
-  "hero_feature_title": "'APM x LUCE' 가입 공급업체 대상 판매제품 AI 모델 자동화 업데이트",
-  "hero_feature_description": "apM 회원가입과 매장·판매제품 업데이트를 AI로 자동화한 신규 경험을 만나보세요.",
+  "hero_feature_title": "B2B Seller 전문 App \"LUCE\"<br>회원가입 Best 3 도매상인 중 apM 도매상인 대상 판매제품 AI모델 자동화 업데이트",
+  "hero_feature_description": "동대문 도매상인분들의 \"LUCE\" 회원가입 과 판매제품 업데이트를 자동화 한 신규 경험을 만나보세요.",
   "hero_video_fallback": "현재 브라우저에서는 동영상을 재생할 수 없습니다.",
   "signup_status_tag": "SIGNUP STATUS",
   "signup_status_title": "회원 가입 현황",
@@ -67,6 +67,7 @@
   "signup_change_type": "회원 유형 다시 선택",
   "signup_terms_title": "약관 동의",
   "signup_terms_required_title": "개인정보 수집 및 이용 동의 (필수)",
+  "signup_terms_marketing_title": "마케팅 정보 수신 동의 (선택)",
   "signup_terms_intro": "㈜루체는 회원 가입을 위해 아래의 개인정보를 수집·이용합니다.",
   "signup_terms_item1": "수집 항목: 이름, 이메일, 비밀번호, 연락처, 선택적으로 회사명 및 채널 정보",
   "signup_terms_item2": "이용 목적: 서비스 제공, 회원 식별, 고객 상담, 파트너 매칭",
