--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,8 +6,8 @@
   "nav_admin": "管理员",
   "signup": "注册",
   "hero_feature_tag": "LOOKBOOK 功能",
-  "hero_feature_title": "“APM x LUCE” 面向供应商的商品 AI 模特自动更新",
-  "hero_feature_description": "体验通过 AI 自动化 apM 会员注册及门店、商品更新的全新流程。",
+  "hero_feature_title": "面向 B2B 卖家的专业应用“LUCE”<br>跻身注册前三的 apM 东大门批发商可享商品 AI 模型自动更新",
+  "hero_feature_description": "体验为东大门批发商打造的 LUCE 会员注册与商品更新 AI 自动化新流程。",
   "hero_video_fallback": "当前浏览器无法播放该视频。",
   "signup_status_tag": "注册状态",
   "signup_status_title": "会员注册概览",
@@ -67,6 +67,7 @@
   "signup_change_type": "重新选择会员类型",
   "signup_terms_title": "条款同意",
   "signup_terms_required_title": "个人信息收集与使用同意（必填）",
+  "signup_terms_marketing_title": "营销信息接收同意（可选）",
   "signup_terms_intro": "LUCE 为会员注册收集并使用以下个人信息。",
   "signup_terms_item1": "收集项目：姓名、邮箱、密码、联系电话、可选的公司与频道信息",
   "signup_terms_item2": "用途：提供服务、识别会员、客户咨询、合作伙伴匹配",
