--- a/locales/ko.json
+++ b/locales/ko.json
@@ -6,7 +6,7 @@
   "nav_admin": "어드민",
   "signup": "회원가입",
   "hero_feature_tag": "LOOKBOOK FEATURE",
-  "hero_feature_title": "B2B Seller 전문 App \"LUCE\"<br>회원가입 Best 3 도매상인 중 apM 도매상인 대상 판매제품 AI모델 자동화 업데이트",
+  "hero_feature_title": "B2B Seller 전문 App \"LUCE\" 회원가입 Best 3 도매상인 중 apM 도매상인 대상 판매제품 AI모델 자동화 업데이트",
   "hero_feature_description": "동대문 도매상인분들의 \"LUCE\" 회원가입 과 판매제품 업데이트를 자동화 한 신규 경험을 만나보세요.",
   "hero_video_fallback": "현재 브라우저에서는 동영상을 재생할 수 없습니다.",
   "signup_status_tag": "SIGNUP STATUS",
