--- a/locales/zh.json
+++ b/locales/zh.json
@@ -6,7 +6,7 @@
   "nav_admin": "管理员",
   "signup": "注册",
   "hero_feature_tag": "LOOKBOOK 功能",
-  "hero_feature_title": "面向 B2B 卖家的专业应用“LUCE”<br>跻身注册前三的 apM 东大门批发商可享商品 AI 模型自动更新",
+  "hero_feature_title": "面向 B2B 卖家的专业应用“LUCE” 跻身注册前三的 apM 东大门批发商可享商品 AI 模型自动更新",
   "hero_feature_description": "体验为东大门批发商打造的 LUCE 会员注册与商品更新 AI 自动化新流程。",
   "hero_video_fallback": "当前浏览器无法播放该视频。",
   "signup_status_tag": "注册状态",
