--- a/locales/en.json
+++ b/locales/en.json
@@ -6,7 +6,7 @@
   "nav_admin": "Admin",
   "signup": "Sign Up",
   "hero_feature_tag": "LOOKBOOK FEATURE",
-  "hero_feature_title": "B2B seller-focused app \"LUCE\"<br>apM wholesalers, one of the top 3 onboarding groups, now get AI-model automated catalog updates",
+  "hero_feature_title": "B2B seller-focused app \"LUCE\" apM wholesalers, one of the top 3 onboarding groups, now get AI-model automated catalog updates",
   "hero_feature_description": "Experience a new AI-driven onboarding and product refresh flow built for Dongdaemun wholesalers on LUCE.",
   "hero_video_fallback": "Your browser cannot play this video.",
   "signup_status_tag": "SIGNUP STATUS",
