--- a/locales/zh.json
+++ b/locales/zh.json
@@ -159,5 +159,12 @@
   "checklist_card3_li4": "48小时内共享文件记录",
   "footer_subtitle": "东大门直播电商的准备工具。挑选 → 准备 → 广播。",
   "footer_contact": "联系: admin@luce.app",
-  "footer_copyright": "© 2025 DSY International. 保留所有权利。"
+  "footer_copyright": "© 2025 DSY International. 保留所有权利。",
+  "admin_gate_tag": "ADMIN ACCESS",
+  "admin_gate_title": "此菜单仅供供应商使用。",
+  "admin_gate_description": "请先完成供应商注册，并按照以下指引操作。",
+  "admin_gate_instructions_line1": "完成供应商注册后，请发送邮件至 admin@luce.app",
+  "admin_gate_instructions_line2": "邮件内请写明店铺名称 / 联系人姓名。",
+  "admin_gate_instructions_line3": "我们确认后会回复专用管理员权限。",
+  "admin_gate_cta": "发送邮件至 admin@luce.app"
 }
