--- a/locales/ko.json
+++ b/locales/ko.json
@@ -119,6 +119,7 @@
   "metric_error": "지표를 불러오지 못했습니다.",
   "lookbook_empty": "현재 표시할 룩이 없습니다.",
   "lookbook_loader": "다음 룩을 불러오는 중...",
+  "look_card_hint": "클릭하여 상세 보기",
   "look_modal_video_error": "현재 브라우저에서는 동영상을 재생할 수 없습니다.",
   "look_modal_video_placeholder": "재생할 영상을 찾을 수 없습니다.",
   "selection_title": "셀렉션 바구니",
